--- a/2-26/面经.md
+++ b/2-26/面经.md
@@ -4,8 +4,26 @@
 
 | Date        | QA           | Links  |
 | ------------- |:-------------:| -----:|
-| 2019-01      | 向量；Binary matix;city and ppulation | [1](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=472404) |
+| 2019-01      | 向量；Binary matix;city and pulation | [1](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=472404) |
 | 2019-02       | city; 973      |   [2](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=476369) |
 | 2019-02 |528;grid sparse;139       | [3](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=480521)    |
-x
+| 2019-02 |23 变种 priority quere       | [4](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=480418)    |
+| 2019-02 |273；157；114       | [5](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=479633)    |
+| 2019-02 |23;226 镜像二叉树       | [6](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=477573)    |
+| 2019-01 |636；corner cases assert       | [7](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=473837)    |
+| 2019-01 |127;286;71;560(正数？负数？ 325)；304(corner cases)   | [8](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=474281)    |
+| 2019-01 |78；210; 286       | [9](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=471751)    |
+| 2018-11 |56 变种 487;424       | [10](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=473837)    |
+| 2018-11 |498；523       | [11](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=459693)    |
+| 2018-11 |56 变种 487;424       | [12](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=473837)    |
+| 2018-11 |friend list      | [13](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=460880)    |
+| 2018-11 |78;90;recursion iterative       | [14](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=461012)    |
+| 2018-10 |273;304;426;647       | [15](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=453229)    |
+| 2018-12 |124        | [16](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=464680)    |
+| 2018-11 |286；253；223 exponential      | [17](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=465295)    |
+| 2018-12 |binary tree print right most node; 42  (-inf)    | [18](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=466614)    |
+| 2018-12 |78;90;recursion iterative;33 (81 duplicates);463 ( dedup islands with same shape)      | [19](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=466670)    |
+| 2018-12 |10；322;518     | [20](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=467805)    |
+| 2018-12 |398;317;329;      | [17](https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=468617)    |
 
+2018-11-10	
